[package]
name = "asahi"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
license-file.workspace = true
description = "Modular and customizable toolkit for Discord bots and side projects"
exclude = ["rust-toolchain", "*.toml", ".gitignore", ".vscode", ".github"]

[workspace]
members = ["canvas", "coordinator", "http", "internal", "macros", "utils"]

[workspace.package]
version = "0.1.6"
edition = "2024"
authors = ["Nwerosama"]
repository = "https://github.com/Niko-Devel/asahi"
rust-version = "1.88"
license-file = "LICENSE"
description = "Workspace crate for Asahi toolkit"

[workspace.dependencies]
ab_glyph = "0.2.31"
asahi_internal = { path = "internal", version = "0.1.6" }
asahi_utils = { path = "utils", version = "0.1.6" }
async-trait = "0.1.38"
bb8-redis = "0.24.0"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1"] }
image = "0.25.6"
imageproc = "0.25.0"
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
pin-project-lite = "0.2.16"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = [ "native-tls-vendored" ] }
serde-xml-rs = "0.8.1"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio"] }
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "time", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unicode-segmentation = "1.12.0"
uptime_lib = "0.3.1"

[dependencies]
asahi_canvas = { path = "canvas", version = "0.1.6", optional = true }
asahi_coordinator = { path = "coordinator", version = "0.1.6", optional = true }
asahi_http = { path = "http", version = "0.1.6", optional = true }
asahi_internal = { workspace = true }
asahi_macros = { path = "macros", version = "0.1.6" }
asahi_utils = { workspace = true, optional = true }

[features]
default = ["utils"]
sqlx-pg = ["asahi_utils/sqlx-pg"]
sqlx-sqlite = ["asahi_utils/sqlx-sqlite"]

canvas = ["dep:asahi_canvas"]
coordinator = ["dep:asahi_coordinator"]
http = ["dep:asahi_http"]
utils = ["dep:asahi_utils"]
