[package]
name = "asahi_canvas"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
ab_glyph = "0.2.29"
image = "0.25.6"
imageproc = "0.25.0"

[features]
