[package]
name = "asahi_canvas"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
ab_glyph = { workspace = true }
asahi_utils = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
unicode-segmentation = { workspace = true }
