[package]
name = "asahi_coordinator"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
asahi_internal = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[features]
