[package]
name = "asahi_http"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
asahi_internal = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
http-body-util = "0.1.3"
pin-project-lite = "0.2.16"

[features]
default = []
config = ["asahi_internal/config"]
