[package]
name = "asahi_http"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
asahi_internal = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
pin-project-lite = { workspace = true }
tokio = { workspace = true }

[features]
default = []
config = ["asahi_internal/config"]
