[package]
name = "asahi_internal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "Internal core crate for Asahi framework"

[dependencies]
bb8-redis = "0.23.0"
hyper = { version = "1.6.0", features = ["http1"] }
thiserror = { workspace = true }
sqlx = { workspace = true }
serde-xml-rs = "0.8.1"
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
config = []
