[package]
name = "asahi_internal"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description = "Internal core crate for Asahi framework"

[dependencies]
bb8-redis = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, optional = true }
serde-xml-rs = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = { workspace = true, optional = true }

[features]
default = []
prober = ["dep:warp", "dep:tokio", "dep:serde"]
