[package]
name = "asahi_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
asahi_internal = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
regex = { workspace = true }
sqlx = { workspace = true, optional = true }
sysinfo = { workspace = true }
uptime_lib = { workspace = true }

[features]
sqlx-pg = ["dep:sqlx", "sqlx/postgres"]
sqlx-sqlite = ["dep:sqlx", "sqlx/sqlite"]
